--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   dio: ^4.0.6
   provider: ^6.0.5
+  jwt_decoder: ^2.0.1
+  flutter_secure_storage: ^8.0.0
+  image_picker: ^0.8.6+3
 
 dev_dependencies:
   flutter_test:
