--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   jwt_decoder: ^2.0.1
   flutter_secure_storage: ^8.0.0
   image_picker: ^0.8.6+3
+  intl: ^0.18.0
+  razorpay_flutter: ^1.3.4
+  fluttertoast: ^8.2.1
+ 
 
 dev_dependencies:
   flutter_test:
