--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   razorpay_flutter: ^1.3.4
   fluttertoast: ^8.2.1
   flutter_html: ^2.2.1
+  socket_io_client: ^2.0.1
  
 
 dev_dependencies:
