--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,28 +36,37 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  dio: ^4.0.6
+  dio: ^5.3.0
   provider: ^6.0.5
   jwt_decoder: ^2.0.1
   flutter_secure_storage: ^8.0.0
-  image_picker: ^0.8.6+3
+  image_picker: ^1.0.1
   intl: ^0.18.0
   razorpay_flutter: ^1.3.4
-  fluttertoast: ^8.2.1
-  flutter_html: ^2.2.1
+  flutter_html: ^3.0.0-beta.2
   socket_io_client: ^2.0.1
+  shimmer: ^3.0.0
+  url_launcher: ^6.1.11
+  fluttertoast: ^8.0.7
  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.13.1
+  flutter_lints: ^2.0.2
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/app_logo.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+ 
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
